# kodi-buffalo-remote

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
buffalo/: __init__.py  _kodi.py  axis.py  buttons.py  main.py  util.py
buffalo/cli/: entry.py
tests/: test_imports.py
