; [build_sphinx]
; all_files = 1
; build-dir = doc/build
; source-dir = doc/source

[metadata]
name = kodi-buffalo-remote
author = mvr
author_email = example@example.com
summary =
description-file = README.md
license = DWTFYW
home-page = https://github.com/mattvonrocketstein/kodi-buffalo-remote
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    buffalo

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    buffalo=buffalo.cli.entry:main
